removed a plugin from pom.xml